--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.15",
     "expo-camera": "^13.2.1",
-    "expo-image-picker": "~12.0.1",
+    "expo-image-picker": "^14.1.1",
+    "expo-location": "^15.1.1",
     "expo-status-bar": "~1.4.4",
+    "patch-package": "^7.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
