--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-web": "0.17.1",
-    "react-native-maps": "1.3.2"
+    "react-native-maps": "1.3.2",
+    "expo-sqlite": "~11.1.1",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
